@startuml
'https://plantuml.com/class-diagram

entity ToDoListCatalog {
    Long Id
    String name
    List <ToDoList> toDoLists
    List <Tag> tags
    User user
}

entity ToDoList {
    Long Id
    String name
    List <ToDoListEntry> entries
    List <Tag> tags
    User owner
}

entity ToDoListEntry {
    Long Id
    String summary
    String details
    Boolean done
    Boolean repeating
    Enum repeatPeriod <<how often to repeat>>
    Date deadline
    List <ToDoListEntry> subTasks
    List <Tag> tags
}

entity Tag {
    Long Id
    String name
    User owner
}

enum RepeatPeriod {
    EVERY_DAY
    EVERY_MONTH
    EVERY_WEEK
    EVERY_MONDAY
    EVERY_TUESDAY
    NEVER
}

entity User {
    Long Id
    String name
    String password <<encrypted>>
    List <ToDoListCatalog> catalogs
    List <Tag> tags
}

User ||--|{ ToDoListCatalog
User ||--|{ Tag
User ||--|{ ToDoList
ToDoListCatalog ||--|{ ToDoList
ToDoList ||--|{ ToDoListEntry
ToDoListEntry ||--|{ ToDoListEntry
ToDoListCatalog }|--|{ Tag
ToDoList }|--|{ Tag
ToDoListEntry }|--|{ Tag
ToDoListEntry --> RepeatPeriod

@enduml